[workspace]
resolver = "2"
members = [
	"asm-playground",
	"doasm",
	"dtemu",
	"dt-bindings",
	"yarer",
	"unasm-derive",
	"cartridge",
	"readcart",
	"asane",
	"paracpm", "libemu-crossterm", "libemu", "libemu-3ds", "libemu-psp",
]

[profile.dev]
debug = "full"
codegen-units = 2
opt-level = 3
lto = false

[profile.release]
debug = "full"
codegen-units = 1
opt-level = 3
lto = "fat"
panic = "abort"
