[package]
name = "asane"
version = "0.1.0"
edition = "2021"

[dependencies]
asm-playground = { version = "0.1.0", path = "../asm-playground" }
bitfield-struct = "0.6.1"
futures-lite = { version = "2.3.0", default-features = false, features = ["std"] }
static_assertions = "1.1.0"

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 3

[profile.release]
opt-level = 3
