[package]
name = "asane"
version = "0.1.0"
edition = "2021"

[dependencies]
asm-playground = { path = "../asm-playground", features = ["alloc"], default-features = false }
bitfield-struct = "0.6.1"
cassette = "0.3.0"
static_assertions = "1.1.0"

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 3

[profile.release]
opt-level = 3

[features]
alloc = []
cycle_stepping = []
cycle_counting = []
nightly = []
std = []
default = ["alloc", "cycle_counting"]

[dev-dependencies]
hex = "0.4.3"
