[package]
name = "asm-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield-struct = "0.6.0"
nom = { version = "7.1.3", optional = true }
unasm-derive = { version = "0.1.0", path = "../unasm-derive" }

[features]
alloc = []
encode = ["alloc"]
parse = ["dep:nom", "std"]
std = ["alloc"]
default = ["encode", "parse"]
