[package]
name = "dtemu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.78"
bitfield-struct = "0.6.0"
clap = { version = "4.5.1", features = ["derive"] }
crossterm = "0.27.0"
dt-bindings = { version = "0.1.0", path = "../dt-bindings" }
fdt = "0.1.5"
futures = "0.3.30"
parking_lot = "0.12.1"
ratatui = "0.26.1"
unasm = { version = "0.1.0", path = "../unasm" }

[build-dependencies]
bindgen = "0.69.4"
